logica condicional no allowed_hosts

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,7 @@
         "src": "/static/(.*)",
         "dest": "/static/$1"
       }
-    ]
+    ],
+    "outputDirectory": "staticfiles"
   }
   
