--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ django-crispy-forms==2.1
 django-easy-audit==1.3.6
 gunicorn==22.0.0
 packaging==24.0
-psycopg-binary==3.1.18
-psycopg-pool==3.2.1
+# psycopg-binary==3.1.18
+# psycopg-pool==3.2.1
 psycopg2-binary==2.9.9
 python-decouple==3.8
 python-dotenv==1.0.1
